--- a/style.css
+++ b/style.css
@@ -32,4 +32,14 @@ body {
     color: white;
 }
 
+.about-section {
+    background: #f2f2f2;
+    color: black;
+    padding: 200px;
+}
+
+.about-section p {
+    font-size: 20px;
+}
+
 
